# webagent

./: CMakeLists.txt  README.md
.github/workflows/: cd-release.yml  ci.yml
config/: config.json
docs/: API.md  Architecture.md  ТЗ.md
frontend/: README.md  STRUCTURE.md  app.js  index.html  styles.css
include/: agent.h  agent_video_utils.h  frontend_launcher.h  local_control_http_utils.h  local_control_server.h  screamer_open.h  video_loader.h
src/: CMakeLists.txt  agent.cpp  agent_video_utils.cpp  frontend_launcher.cpp  local_control_http_utils.cpp  local_control_server.cpp  main.cpp  screamer_open.cpp  video_loader.cpp
tests/: webagent_tests.cpp
